--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6388,7 +6388,7 @@
    "source": [
     "## Centrality\n",
     "\n",
-    "Considering that every node in the dataset constitutes top ~20% of Redditors from 2014, it seems better to use Katz centrality, in order to ensure no node is labeled irrelevant. But, don't want to assign high centrality just by association with \"important\" nodes, therefore will use PageRank."
+    "Considering that every node in the dataset constitutes top ~20% of Redditors from 2014, it seems better to use Katz centrality vs. eigenvector centrality, in order to ensure no node is labeled irrelevant. But, don't want to assign high centrality just by association with \"important\" nodes, therefore will use PageRank."
    ]
   },
   {
@@ -13347,7 +13347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -13361,7 +13361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
