Create module to help group subreddits w chatgpt
Created a module that batches subreddits and creates a query that can be input i
nto ChatGPT for grouping into predefined subreddits. Cannot attest to the accura
cy but will help in getting a stratified sample that can then be pruned for accu
racy.

--- a/non-political-subreddits-analysis.ipynb
+++ b/non-political-subreddits-analysis.ipynb
@@ -12,6 +12,7 @@
     "from time import time\n",
     "import pandas as pd\n",
     "import networkx as nx\n",
+    "import graph_tool as gt\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from json import load\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "e13d803b",
    "metadata": {},
    "outputs": [],
@@ -35,29 +36,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "id": "32a7b46f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'analysis' from '/home/rimov/Documents/Course Material/Assignments/m450/reddit-assortativity-analysis/analysis.py'>"
+       "<module 'utils' from '/home/rimov/Documents/Course Material/Assignments/m450/reddit-assortativity-analysis/utils.py'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Call to reload an imported module if it has been updated\n",
-    "reload(a)"
+    "reload(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "36202f4c",
    "metadata": {},
    "outputs": [
@@ -67,7 +68,7 @@
        "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "eab17898",
    "metadata": {},
    "outputs": [
@@ -90,7 +91,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "888f252a",
    "metadata": {},
    "outputs": [],
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a14dcff1",
    "metadata": {},
    "outputs": [
@@ -238,41 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "40385dc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [1,2,3]\n",
-    "b=[4,5,6]\n",
-    "c=[7,8,9]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "5f6bec34",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = [*a, *b, *c]\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "13b61072",
    "metadata": {},
    "outputs": [],
@@ -382,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "148ac4fc",
    "metadata": {},
    "outputs": [],
@@ -407,7 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
+   "id": "973d27bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "da650419",
    "metadata": {},
    "outputs": [],
@@ -417,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "45bdad10",
    "metadata": {
     "scrolled": true
@@ -443,7 +420,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "cc6ad24e",
    "metadata": {},
    "outputs": [
@@ -465,7 +442,7 @@
        "0.05903606026461977"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,14 +464,14 @@
    "id": "f432ca9c",
    "metadata": {},
    "source": [
-    "### Assortativity\n",
+    "### Assortativity (Largest strongly-connected component vs not)\n",
     "\n",
     "Looking at assortativity between largest strongly-connected component and those outside of it. The reason for this split, is the idea that if there is little communication between the component and \"outsider\" nodes -- and nodes in these networks represent top 20% of active users in the subreddit -- then new users will get replies from either group and not both."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "38f166ff",
    "metadata": {},
    "outputs": [
@@ -534,7 +511,7 @@
        "Name: modularity, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,6 +1918,79 @@
    "outputs": [],
    "source": [
     "plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df200bcf",
+   "metadata": {},
+   "source": [
+    "# TODO: Assortativity (Agglomerative Heuristic)\n",
+    "\n",
+    "Use modularity maximization algorithm to partition networks into communities. Then calculate the modularity based on the extracted communities. Keeping track of amount of communities detected as might be potentially useful.\n",
+    "\n",
+    "Time-consuming in Networkx; saving for further analysis down the line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "300517a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "communities = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "60d631f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting communities for: CrusaderKings\n",
+      "Getting communities for: Diablo\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGetting communities for: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m _, net \u001b[38;5;241m=\u001b[39m u\u001b[38;5;241m.\u001b[39mdigraph_from_path(sr, path)\n\u001b[0;32m----> 5\u001b[0m communities[sr] \u001b[38;5;241m=\u001b[39m \u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malgorithms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunity\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlouvain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlouvain_communities\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mresolution\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresolution\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mthreshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mseed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mseed\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 12:4\u001b[0m, in \u001b[0;36margmap_louvain_communities_9\u001b[0;34m(G, weight, resolution, threshold, seed)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/data_analysis/lib/python3.10/site-packages/networkx/algorithms/community/louvain.py:111\u001b[0m, in \u001b[0;36mlouvain_communities\u001b[0;34m(G, weight, resolution, threshold, seed)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Find the best partition of a graph using the Louvain Community Detection\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03mAlgorithm.\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;124;03mlouvain_partitions\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    110\u001b[0m d \u001b[38;5;241m=\u001b[39m louvain_partitions(G, weight, resolution, threshold, seed)\n\u001b[0;32m--> 111\u001b[0m q \u001b[38;5;241m=\u001b[39m \u001b[43mdeque\u001b[49m\u001b[43m(\u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxlen\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m q\u001b[38;5;241m.\u001b[39mpop()\n",
+      "File \u001b[0;32m~/anaconda3/envs/data_analysis/lib/python3.10/site-packages/networkx/algorithms/community/louvain.py:177\u001b[0m, in \u001b[0;36mlouvain_partitions\u001b[0;34m(G, weight, resolution, threshold, seed)\u001b[0m\n\u001b[1;32m    174\u001b[0m     graph\u001b[38;5;241m.\u001b[39madd_weighted_edges_from(G\u001b[38;5;241m.\u001b[39medges(data\u001b[38;5;241m=\u001b[39mweight, default\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m    176\u001b[0m m \u001b[38;5;241m=\u001b[39m graph\u001b[38;5;241m.\u001b[39msize(weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 177\u001b[0m partition, inner_partition, improvement \u001b[38;5;241m=\u001b[39m \u001b[43m_one_level\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    178\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgraph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpartition\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresolution\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_directed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseed\u001b[49m\n\u001b[1;32m    179\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    180\u001b[0m improvement \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m improvement:\n\u001b[1;32m    182\u001b[0m     \u001b[38;5;66;03m# gh-5901 protect the sets in the yielded list from further manipulation here\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/data_analysis/lib/python3.10/site-packages/networkx/algorithms/community/louvain.py:262\u001b[0m, in \u001b[0;36m_one_level\u001b[0;34m(G, m, partition, resolution, is_directed, seed)\u001b[0m\n\u001b[1;32m    258\u001b[0m     Stot[best_com] \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m degree\n\u001b[1;32m    259\u001b[0m     remove_cost \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mweights2com[best_com] \u001b[38;5;241m/\u001b[39m m \u001b[38;5;241m+\u001b[39m resolution \u001b[38;5;241m*\u001b[39m (\n\u001b[1;32m    260\u001b[0m         Stot[best_com] \u001b[38;5;241m*\u001b[39m degree\n\u001b[1;32m    261\u001b[0m     ) \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m--> 262\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m nbr_com, wt \u001b[38;5;129;01min\u001b[39;00m \u001b[43mweights2com\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    263\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_directed:\n\u001b[1;32m    264\u001b[0m         gain \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    265\u001b[0m             remove_cost\n\u001b[1;32m    266\u001b[0m             \u001b[38;5;241m+\u001b[39m wt \u001b[38;5;241m/\u001b[39m m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    272\u001b[0m             \u001b[38;5;241m/\u001b[39m m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m    273\u001b[0m         )\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "for sr, path in all_paths.items():\n",
+    "    print(f'Getting communities for: {sr}')\n",
+    "    _, net = u.digraph_from_path(sr, path)\n",
+    "    \n",
+    "    communities[sr] = nx.algorithms.community.louvain.louvain_communities(\n",
+    "        net, \n",
+    "        resolution=resolution,\n",
+    "        threshold=threshold,\n",
+    "        seed=seed\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffdaaf9d",
+   "metadata": {},
+   "source": [
+    "______________________________________________________________________"
    ]
   },
   {
@@ -4408,7 +4458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
