Progress save before trip

--- a/non-political-subreddits-analysis.ipynb
+++ b/non-political-subreddits-analysis.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b9aed485",
+   "metadata": {},
+   "source": [
+    "## Update 2023/3/16:\n",
+    "\n",
+    "The method used here to partition the groups and obtain samples that should have been representative of reddit groups as a whole is biased. The choice of subreddits was based on size, personal recognition, and placement in the list of datasets.\n",
+    "\n",
+    "All the subreddits have been grouped by ChatGPT into more or less relevant groups, and below analysis will be repeated but on a random sample which will hopefully actually be representative of reddit's communities."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8f8531e6",
