--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "22e1615d",
+   "metadata": {},
+   "source": [
+    "## Update 2023/3/16:\n",
+    "\n",
+    "The analysis below was performed for the course MTH 450: Network Analysis, led by Dr. Masuda. To upscale the project, the total dataset was partitioned by ChatGPT into relevant categories, and random samples will be drawn, from which less biased conclusions can be drawn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fc0ff43e",
    "metadata": {},
    "source": [
@@ -13361,7 +13371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
