--- a/chatgpt-groups.ipynb
+++ b/chatgpt-groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "85dd1d04",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,9 @@
     "import regex as re\n",
     "from pathlib import Path\n",
     "from importlib import reload\n",
-    "import gpt_grouping as group\n",
-    "import utils as u\n",
+    "from collections import defaultdict\n",
+    "import grouping\n",
+    "import files\n",
     "import analysis as a"
    ]
   },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2057b84f",
    "metadata": {},
    "outputs": [
@@ -68,7 +69,7 @@
        "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "b7d069cf",
    "metadata": {},
    "outputs": [
@@ -91,13 +92,13 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path = Path('data/chain_networks')\n",
+    "data_path = Path('data/chain-networks')\n",
     "data_path.exists()"
    ]
   },
@@ -3772,6 +3773,29 @@
     "### Next Steps:\n",
     "\n",
     "Will be extracting subreddit samples from each category above and comparing their statistics in hopes of discovering some insight into the groups themselves."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a6e82b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs = defaultdict(list)\n",
+    "for g, s in groups.items():\n",
+    "    gs[g].extend(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d4706367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/subreddits-grouped.json', 'w') as f:\n",
+    "    json.dump(gs, f)"
    ]
   },
   {
